--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,12 @@
             android:layout_height="wrap_content"
             android:text="Button" />
 
+        <Button
+            android:id="@+id/btIntentToPagination"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Intent pagination" />
+
     </LinearLayout>
 
 </LinearLayout>
